--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <span class="experience__demo"><a href="https://kiaizen.github.io/Jogo-do-Numero-Secreto/" target="_blank"><button class="experiencia__botao--demo">Ver demo</button></a></span>
                     </div>
             </div>
-            <img class="experience__img" src="/assets/Jogo_do_número_secreto.png">
+            <img class="experience__img" src="/assets/jogo_do_numero_secreto.png">
         </div>  
 
     </section>
