--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                         " target="_blank">Linkedin <img src="assets\arrow.png"></a></li>
                     <li class="title__network__item"><a href="https://www.instagram.com/felipeharao/" target="_blank">Instagram <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="assets/Currículo 2023 Felipe Harão.pdf">Currículo <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="assets/Currículo.pdf">Currículo <img src="assets\arrow.png"></a></li>
                 </ul>
             </div>
         </div>
